[package]
name = "test_new_thread"
version = "0.1.0"
authors = ["Anton Sapunov <fort.sav.28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"

tokio = { version = "1.6", features = ["macros", "time", "sync", "rt-multi-thread"] }

actix-web = { version = "4.0.0-beta.6"}
actix-server = "2.0.0-beta.5"
